<resources>
    <string name="app_name">Pets</string>
    <string name="nombre">juancho</string>
    <string name="tipo">perro</string>
    <string name="likes">2</string>
    <string name="pnombre">nombre</string>
    <string name="ptipo">tipo</string>
    <string name="plikes">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
