<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.jesus.pets.DetalleMascota">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>
<TextView
    android:id="@+id/tvNombre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nombre"
    android:textStyle="bold"
    android:textSize="@dimen/nombre_pet"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icono_pet"
            android:src="@drawable/huella"
            />
    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icono_pet"
            android:id="@+id/imgvCorreo"
            android:src="@drawable/like" />
    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"/>
    </LinearLayout>


</LinearLayout>
