<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:cardCornerRadius="@dimen/corner_radius_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView

            android:id="@+id/imgvFoto"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alto"
            android:src="@drawable/dog"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/like"
            android:layout_alignParentLeft="true"
            />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pnombre"
            android:textSize="@dimen/nombre_pet"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ptipo"

            />
            </LinearLayout>
            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plikes"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/likes"

                />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>